# aoc2021

./: Cargo.toml
day1/: main.rs
day16/: main.rs
day2/: main.rs
day20/: main.rs
day21/: main.rs
day25/: main.rs
day3/: main.rs
day4/: main.rs
day5/: main.rs
day6/: main.rs
day7/: main.rs
